Added basic receive functionality. Note: Use debug mode to find out what the buffer contains.

--- a/BM78.ioc
+++ b/BM78.ioc
@@ -6,7 +6,8 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP3=USART3
+Mcu.IPNb=4
 Mcu.Name=STM32F446V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PD8
@@ -41,8 +42,10 @@ PB7.Signal=GPIO_Output
 PD10.Locked=true
 PD10.Signal=GPIO_Output
 PD11.Locked=true
+PD11.Mode=CTS_RTS
 PD11.Signal=USART3_CTS
 PD12.Locked=true
+PD12.Mode=CTS_RTS
 PD12.Signal=USART3_RTS
 PD13.Locked=true
 PD13.Signal=GPIO_Output
@@ -51,8 +54,10 @@ PD14.Signal=GPIO_Output
 PD15.Locked=true
 PD15.Signal=GPIO_Output
 PD8.Locked=true
+PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
 PD9.Locked=true
+PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -73,7 +78,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=BM78.ioc
 ProjectManager.ProjectName=BM78
@@ -82,7 +87,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=16000000
 RCC.FamilyName=M
@@ -105,6 +110,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAIInputFreq_Value=1000000
 RCC.VCOSAIOutputFreq_Value=192000000
+USART3.IPParameters=VirtualMode
+USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
